--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -111,7 +111,7 @@
         <div
           id="collapseTwo"
           class="collapse"
-          aria-labelledby="headingTwo"
+          aria-labelledby="collapseTwo"
           data-parent="#accordionSidebar"
         >
           <div class="bg-white py-2 collapse-inner rounded">  
@@ -154,7 +154,7 @@
           <div
             id="collapseTwo"
             class="collapse"
-            aria-labelledby="headingTwo"
+            aria-labelledby="collapseTwo"
             data-parent="#accordionSidebar"
           >
             <div class="bg-white py-2 collapse-inner rounded">   
